# WeirdSpace

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md  credits.md  dependencies.md  gnome-terminal-workspace.bash  noise.hpp  useful_commands.txt
game/: CMakeLists.txt  app.cpp  app.hpp  app_imgui.cpp  bounding_volume.cpp  bounding_volume.hpp  callbacks.cpp  callbacks.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  fragment.fs  noise.cpp  noise.hpp  player.cpp  player.hpp  sand.dds  sand.mtl  settings.hpp  shader.cpp  shader_A.cpp  shader_A.hpp  shader_A_fragment.glsl  shader_A_vertex.glsl  shader_world.cpp  shader_world.hpp  shader_world_A.cpp  shader_world_A_geometry.glsl  shader_world_A_vertex.glsl  shader_world_B.cpp  shader_world_B.hpp  shader_world_B_geometry.glsl  shader_world_B_vertex.glsl  shader_world_geometry.glsl  shader_world_vertex.glsl  texture_loader.cpp  useful.cpp  useful.hpp  vertex.vs  (+7 more)
game/assets/blocks/: blocks_combined-packed.xcf  debug.xcf
game/assets/player/: player.blend  player.blend1  player.dds  player.xcf
game/assets/sand/: sand.blend  sand.blend1  sand.mtl  sand.xcf
game/map_generator/: map_generator.cpp  map_generator.hpp  map_generator_GPU.cpp  map_generator_cpu_drawing_helpers.cpp  map_generator_tour.cpp  map_storage.cpp  map_storage.hpp  noise.cpp  noise.hpp  shader_map_fragment.glsl  shader_map_generator_compute.glsl  shader_map_generator_fragment.glsl  shader_map_generator_vertex.glsl  shader_map_vertex.glsl  voronoi.cpp  voronoi.hpp
game/runtime/: fragment.fs  sand.dds  settings.txt  shader_A_fragment.glsl  shader_A_vertex.glsl  shader_map_fragment.glsl  shader_map_generator_fragment.glsl  shader_map_vertex.glsl  shader_world_A_geometry.glsl  shader_world_A_vertex.glsl  shader_world_B_geometry.glsl  shader_world_B_vertex.glsl  shader_world_geometry.glsl  shader_world_vertex.glsl  vertex.vs
game/runtime/predefined_maps/: big_continent_with_rivers1.txt  big_continent_with_rivers2.txt  continents_with_rivers1.txt  continents_with_rivers2.txt  desert1.txt  desert2.txt  evolving_GPU_continents1.txt  evolving_GPU_continents2.txt  huge_mountains1.txt  huge_mountains2.txt  random_GPU_continents.txt  random_continents_with_rivers_and_humidity.txt  random_continents_with_rivers_and_temperature.txt  random_desert.txt
game/utilities/: expiration_queue.cpp  expiration_queue.hpp  geometry.cpp  geometry.hpp  global_settings_gui.cpp  global_settings_gui.hpp  imgui_basic_controls.cpp  imgui_basic_controls.hpp  settings.cpp  settings.hpp  shader_loader.cpp  shader_loader.hpp  texture_loader.cpp  texture_loader.hpp  useful.cpp  useful.hpp
game/utils/: controls.cpp  objloader.cpp  objloader.hpp  texture.cpp  texture.hpp  useful.cpp  useful.hpp
media/recordings/: continents_with_rivers1.webm
playground/: CMakeLists.txt  fragment.fs  playground.cpp  sand.blend  sand.blend1  vertex.vs  world.cpp  world.hpp
playground/utils/: controls.hpp
tools/generator_playground/: CMakeLists.txt  app.cpp  app.hpp  app_generator.cpp  app_imgui.cpp  bitmap.cpp  bitmap.hpp  bitmap_generator.cpp  generator.cpp  generator.hpp  generatorAB.cpp  generatorC.cpp  generatorC_GPU.cpp  generatorC_tour.cpp  generatorD.cpp  generator_playground.cpp  geometry.cpp  geometry.hpp  line.cpp  line.hpp  map_generator  noise.cpp  noise.hpp  run.gdb  scratchpad.txt  settings.cpp  settings.hpp  shader_fragment.glsl  shader_generator_D_compute.glsl  shader_generator_D_fragment.glsl  shader_generator_D_vertex.glsl  shader_line_fragment.glsl  shader_line_vertex.glsl  shader_loader.cpp  shader_loader.hpp  shader_vertex.glsl  useful.cpp  useful.hpp  utilities  voronoi.cpp  (+1 more)
tools/generator_playground/runtime/: predefined_maps  settings.txt  shader_bitmap_fragment.glsl  shader_bitmap_vertex.glsl  shader_fragment.glsl  shader_generator_D_compute.glsl  shader_generator_D_fragment.glsl  shader_generator_D_vertex.glsl  shader_line_fragment.glsl  shader_line_vertex.glsl  shader_map_generator_compute.glsl  shader_map_generator_vertex.glsl  shader_vertex.glsl
tools/obj_dump/: CMakeLists.txt  obj_dump.cpp  objloader.cpp  objloader.hpp
